# rando_kanji

./: .gitignore  Cargo.toml  README.md  config.json
.cargo/: config.toml
res/: kanji_db.csv
src/: app.rs  audio.rs  config.rs  game_state.rs  kanji.rs  kanji_fall.rs  main.rs  utils.rs  window.rs
