[package]
name = "rando_kanji"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sfml = "0.18.0"
egui-sfml = "0.1.1"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
csv = "1.1.6"
rand = "0.8.5"

[profile.release]
debug = true